Add company management features and update related reports

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -15,6 +15,7 @@
                     {% if session.get('user_id') %}
                         {% if session.get('user_role') == 'admin' %}
                             <li class="nav-item"><a class="nav-link" href="{{ url_for('dashboard.dashboard') }}">Dashboard</a></li>
+                            <li class="nav-item"><a class="nav-link" href="{{ url_for('company.company_settings') }}">Company</a></li>
                         {% endif %}
                         <li class="nav-item"><a class="nav-link" href="{{ url_for('employee.employee_dashboard') }}">Employee</a></li>
                         <li class="nav-item"><a class="nav-link" href="{{ url_for('report.report') }}">Reports</a></li>
