--- a/app/templates/employee.html
+++ b/app/templates/employee.html
@@ -8,7 +8,7 @@
         <div class="card-body">
             <div class="table-responsive">
                 <table class="table table-striped table-hover">
-                    <thead class="table-dark">
+                    <thead>
                         <tr>
                             <th>Name</th>
                             <th>Designation</th>
@@ -92,7 +92,7 @@
         <div class="card-body">
             <div class="table-responsive">
                 <table class="table table-hover">
-                    <thead class="table-light">
+                    <thead>
                         <tr>
                             <th>Period</th>
                             <th>Attendance</th>
